2010-07-23  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.list.php: Added code to show title if page
	called from Manage Agents.

	* godmode/modules/manage_network_components.php: Change title.

	* godmode/gis_maps/configure_gis_map.php: Change fixed text to variable.

2010-07-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/functions_db.php
	operation/agentes/networkmap.topology.php
	operation/agentes/networkmap.groups.php
	operation/agentes/ver_agente.php
	operation/agentes/networkmap.php: Rewritten the get status of modules
	and agents and written the same feature for groups and policies. Added
	the groups view network map. All for pending task: 3019636

2010-07-23  Dario Rodriguez   <dario.rodriguez@gmail.com>

	* operation/agentes/ver_agente.php: Changed code to use print_page_header
	to print the tabs
	* godmode/agentes/configurar_agente.php: Changed code to use print_page_header
	to print the tabs

2010-07-23  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/alerts/alert_list*.php: Cleaned code. Removed old title style.

	* godmode/agentes/massive_operations.php: Updated year. 

	* godmode/agentes/massive_config.php: Use better text in title and button.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: added the show more data when click
	in the icon eye.
	Pending task: #3021813

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_ultimopaquete.php: added code for sort by
	data.
	
	* operation/agentes/estado_monitores.php,
	godmode/agentes/module_manager.php: added the icons and source code for
	order rows of list alerts by columns Module Name, Type, Interval and
	Timestamp.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: lost in previus commit the change to
	"print_select_groups" the new parameter $id_group, to don't show the group
	with id and children of this group.
	